--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,37 +1,44 @@
 {% extends "layout/base.html" %}
 
 {% block content %}
-    <div class="col-md-8">
-        <div class="card">
-            <div class="card-header">Sign In</div>
-            <div class="card-body">
-                <form action="" method="post" novalidate>
-                    {{ form.hidden_tag() }}
-                    <div class="form-group row">
-                        {{ form.username.label(class="col-md-4 col-form-label text-md-right") }}
-                        <div class="col-md-6">
-                            {{ form.username(class="form-control") }}
-                            {% for error in form.username.errors %}
-                                <div class='invalid-feedback'>{{ error }}</div>
-                            {% endfor %}
-                        </div>
+    <div class="col-md-6 mx-auto">
+        <div class="card card-body bg-light mt-5">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    <ul class="list-group messages">
+                        {% for category, message in messages %}
+                            <li class="list-group-item list-group-item-{{ category }}">{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            {% endwith %}
+            <h2>Login</h2>
+            <p>Please fill in your credentials to log in</p>
+            <form action="" method="post" novalidate>
+                {{ form.hidden_tag() }}
+                <div class="form-group">
+                    <label for="username">Name: <sup>*</sup></label>
+                    {{ form.username(class="form-control form-control-lg") }}
+                    {% for error in form.username.errors %}
+                        <span class='invalid-feedback'>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                <div class="form-group">
+                    <label for="password">Password: <sup>*</sup></label>
+                    {{ form.password(class="form-control form-control-lg") }}
+                    {% for error in form.password.errors %}
+                        <span class='invalid-feedback'>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                <div class="row">
+                    <div class="col">
+                        {{ form.submit(class="btn btn-success btn-block") }}
                     </div>
-                    <div class="form-group row">
-                        {{ form.password.label(class="col-md-4 col-form-label text-md-right") }}
-                        <div class="col-md-6">
-                            {{ form.password(class="form-control") }}
-                            {% for error in form.password.errors %}
-                                <div class='invalid-feedback'>{{ error }}</div>
-                            {% endfor %}
-                        </div>
+                    <div class="col">
+                        <a href="{{ url_for('login') }}" class="btn btn-light btn-block">No account? Register</a>
                     </div>
-                    <div class="form-group row mb-0">
-                        <div class="col-md-8 offset-md-4">
-                            {{ form.submit(class="btn btn-primary") }}
-                        </div>
-                    </div>
-                </form>
-            </div>
+                </div>
+            </form>
         </div>
     </div>
 {% endblock %}
