--- a/app/templates/dashboard/layout/base.html
+++ b/app/templates/dashboard/layout/base.html
@@ -8,11 +8,12 @@
     <title>{{ app_name }} - {{ title }}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
           type="text/css">
+    <link rel="stylesheet" href="//cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">
     <link href="../../../static/css/styles.min.css" rel="stylesheet">
 </head>
 <body id="page-top">
 <div id="wrapper">
-    <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+    <ul class="navbar-nav bg-primary sidebar sidebar-dark accordion" id="accordionSidebar">
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ url_for('index') }}">
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-cubes"></i>
@@ -53,7 +54,7 @@
                  data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h6 class="collapse-header">Manage Posts:</h6>
-                    <a class="collapse-item" href="#">New Post</a>
+                    <a class="collapse-item" href="{{ url_for('dashboard_post_new') }}">New Post</a>
                     <a class="collapse-item" href="#">All Posts</a>
                 </div>
             </div>
@@ -167,11 +168,7 @@
                 </ul>
             </nav>
             <div class="container-fluid">
-                <div class="row">
-
-                    {% block content %}{% endblock %}
-
-                </div>
+                {% block content %}{% endblock %}
             </div>
             <footer class="sticky-footer bg-white fixed-bottom">
                 <div class="container my-auto">
