--- a/app/templates/dashboard/post_new.html
+++ b/app/templates/dashboard/post_new.html
@@ -1,4 +1,4 @@
-{% extends "layout/base.html" %}
+{% extends 'dashboard/layout/base.html' %}
 
 {% block content %}
     <div class="col-md-6 mx-auto">
@@ -12,34 +12,26 @@
                     </ul>
                 {% endif %}
             {% endwith %}
-            <h2>Login</h2>
-            <p>Please fill in your credentials to log in</p>
+            <h2>New Post</h2>
             <form action="" method="post" novalidate>
                 {{ form.hidden_tag() }}
                 <div class="form-group">
-                    <label for="username">Name: <sup>*</sup></label>
-                    {{ form.username(class="form-control form-control-lg") }}
-                    {% for error in form.username.errors %}
+                    <label for="username">Title: <sup>*</sup></label>
+                    {{ form.title(class="form-control form-control-lg") }}
+                    {% for error in form.title.errors %}
                         <span class='invalid-feedback'>{{ error }}</span>
                     {% endfor %}
                 </div>
                 <div class="form-group">
-                    <label for="password">Password: <sup>*</sup></label>
-                    {{ form.password(class="form-control form-control-lg") }}
-                    {% for error in form.password.errors %}
+                    <label for="password">Content: <sup>*</sup></label>
+                    {{ form.content(class="form-control form-control-lg") }}
+                    {% for error in form.content.errors %}
                         <span class='invalid-feedback'>{{ error }}</span>
                     {% endfor %}
-                </div>
-                <div class="form-check form-group">
-                     {{ form.remember_me(class="form-check-input") }}
-                    <label class="form-check-label" for="remember_me">Remember me</label>
                 </div>
                 <div class="row">
                     <div class="col">
                         {{ form.submit(class="btn btn-success btn-block") }}
-                    </div>
-                    <div class="col">
-                        <a href="{{ url_for('register') }}" class="btn btn-light btn-block">No account? Register</a>
                     </div>
                 </div>
             </form>
