--- a/app/templates/dashboard/layout/base.html
+++ b/app/templates/dashboard/layout/base.html
@@ -8,12 +8,14 @@
     <title>{{ app_name }} - {{ title }}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
           type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">
     <link href="../../../static/css/styles.min.css" rel="stylesheet">
 </head>
 <body id="page-top">
 <div id="wrapper">
-    <ul class="navbar-nav bg-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+    <div class="navbar-nav bg-dark shadow sidebar sidebar-dark accordion" id="accordionSidebar">
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ url_for('index') }}">
             <div class="sidebar-brand-icon rotate-n-15">
                 <i class="fas fa-cubes"></i>
@@ -21,10 +23,18 @@
             <div class="sidebar-brand-text mx-3">{{ app_name }}</div>
         </a>
         <hr class="sidebar-divider my-0">
+        <li class="nav-item">
+            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="mr-2 d-none d-lg-inline small">{{ current_user.username }}</span>
+                <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+            </a>
+        </li>
         <li class="nav-item active">
             <a class="nav-link" href="{{ url_for('dashboard') }}">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
-                <span>Dashboard</span></a>
+                <span>Dashboard</span>
+            </a>
         </li>
         <hr class="sidebar-divider">
         <div class="sidebar-heading">
@@ -63,10 +73,11 @@
         <div class="text-center d-none d-md-inline">
             <button class="rounded-circle border-0" id="sidebarToggle"></button>
         </div>
-    </ul>
+    </div>
     <div id="content-wrapper" class="d-flex flex-column">
         <div id="content">
-            <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+            <nav class="navbar navbar-expand navbar-light topbar static-top">
+                <a class="navbar-brand" href="#">{{ title }}</a>
                 <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
                     <i class="fa fa-bars"></i>
                 </button>
@@ -77,37 +88,11 @@
                             <i class="fas fa-comment fa-fw"></i>
                             <span class="badge badge-danger badge-counter rounded">7</span>
                         </a>
-                        <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                        <div class="dropdown-list dropdown-menu dropdown-menu-right shadow"
                              aria-labelledby="messagesDropdown">
                             <h6 class="dropdown-header">
                                 Comments Center
                             </h6>
-                            <a class="dropdown-item d-flex align-items-center" href="#">
-                                <div class="dropdown-list-image mr-3">
-                                    <img class="rounded-circle" src="https://source.unsplash.com/fn_BT9fwg_E/60x60"
-                                         alt="">
-                                    <div class="status-indicator bg-success"></div>
-                                </div>
-                                <div class="font-weight-bold">
-                                    <div class="text-truncate">Hi there! I am wondering if you can help me with a
-                                        problem I've been having.
-                                    </div>
-                                    <div class="small text-gray-500">Emily Fowler · 58m</div>
-                                </div>
-                            </a>
-                            <a class="dropdown-item d-flex align-items-center" href="#">
-                                <div class="dropdown-list-image mr-3">
-                                    <img class="rounded-circle" src="https://source.unsplash.com/AU4VPcFN4LE/60x60"
-                                         alt="">
-                                    <div class="status-indicator"></div>
-                                </div>
-                                <div>
-                                    <div class="text-truncate">I have the photos that you ordered last month, how would
-                                        you like them sent to you?
-                                    </div>
-                                    <div class="small text-gray-500">Jae Chun · 1d</div>
-                                </div>
-                            </a>
                             <a class="dropdown-item d-flex align-items-center" href="#">
                                 <div class="dropdown-list-image mr-3">
                                     <img class="rounded-circle" src="https://source.unsplash.com/CS2uCrpNzJY/60x60"
@@ -118,7 +103,7 @@
                                     <div class="text-truncate">Last month's report looks great, I am very happy with the
                                         progress so far, keep up the good work!
                                     </div>
-                                    <div class="small text-gray-500">Morgan Alvarez · 2d</div>
+                                    <div class="small">Morgan Alvarez · 2d</div>
                                 </div>
                             </a>
                             <a class="dropdown-item d-flex align-items-center" href="#">
@@ -131,43 +116,37 @@
                                     <div class="text-truncate">Am I a good boy? The reason I ask is because someone told
                                         me that people say this to all dogs, even if they aren't good...
                                     </div>
-                                    <div class="small text-gray-500">Chicken the Dog · 2w</div>
+                                    <div class="small">Chicken the Dog · 2w</div>
                                 </div>
                             </a>
-                            <a class="dropdown-item text-center small text-gray-500" href="#">All Comments</a>
+                            <a class="dropdown-item text-center small" href="#">All Comments</a>
                         </div>
                     </li>
-                    <div class="topbar-divider d-none d-sm-block"></div>
                     <li class="nav-item dropdown no-arrow">
-                        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ current_user.username }}</span>
-                            <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
-                        </a>
                         <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                              aria-labelledby="userDropdown">
                             <a class="dropdown-item" href="{{ url_for("profile", username=current_user.username) }}">
-                                <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                                <i class="fas fa-user fa-sm fa-fw mr-2"></i>
                                 Profile
                             </a>
                             <a class="dropdown-item" href="#">
-                                <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                                <i class="fas fa-cogs fa-sm fa-fw mr-2"></i>
                                 Settings
                             </a>
                             <a class="dropdown-item" href="#">
-                                <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                                <i class="fas fa-list fa-sm fa-fw mr-2"></i>
                                 Activity Log
                             </a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{{ url_for("logout") }}">
-                                <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2"></i>
                                 Logout
                             </a>
                         </div>
                     </li>
                 </ul>
             </nav>
-            <div class="container-fluid">
+            <div class="container-fluid  pt-5">
                 {% block content %}{% endblock %}
             </div>
             <footer class="sticky-footer bg-white fixed-bottom">
