--- a/app/templates/dashboard/user_all.html
+++ b/app/templates/dashboard/user_all.html
@@ -1,40 +1,48 @@
 {% extends 'dashboard/layout/base.html' %}
 
 {% block content %}
-    <h1 class="h3 mb-2 text-gray-800">{{ title }}</h1>
-
-    <div class="table-responsive">
-        <table class="table table-bordered" id="usersTable" width="100%" cellspacing="0">
-            <thead>
-            <tr>
-                <th>Position</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Role</th>
-                <th>Registration Date</th>
-            </tr>
-            </thead>
-            <tfoot>
-            <tr>
-                <th>Position</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Role</th>
-                <th>Registration Date</th>
-            </tr>
-            </tfoot>
-            <tbody>
-            {% for i in range(0, len) %}
-            <tr>
-                <td>{{ i + 1 }}</td>
-                <td>{{ user[i].username }}</td>
-                <td>{{ user[i].email }}</td>
-                <td>{{ user[i].role }}</td>
-                <td>{{ user[i].created_at }}</td>
-            </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+    <div class="card">
+        <div class="card-header card-header-primary card-header-icon">
+            <div class="card-icon">
+                <i class="fas fa-table"></i>
+            </div>
+            <h4 class="card-title">DataTables.net</h4>
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-bordered" id="usersTable" width="100%" cellspacing="0">
+                    <thead>
+                    <tr>
+                        <th>Position</th>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Role</th>
+                        <th>Registration Date</th>
+                    </tr>
+                    </thead>
+                    <tfoot>
+                    <tr>
+                        <th>Position</th>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>Role</th>
+                        <th>Registration Date</th>
+                    </tr>
+                    </tfoot>
+                    <tbody>
+                    {% for i in range(0, len) %}
+                        <tr>
+                            <td>{{ i + 1 }}</td>
+                            <td>{{ user[i].username }}</td>
+                            <td>{{ user[i].email }}</td>
+                            <td>{{ user[i].role }}</td>
+                            <td>{{ user[i].created_at }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
