Designed login form, added single for post

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,32 @@
 {% extends 'layout/base.html' %}
 
 {% block content %}
-    <ul>
+    <div class="row blog_posts stander_blog">
         {% for post in posts %}
-            <li>{{ post.title, post.content, post.author.username, post.timestamp }}</li>
+        <div class="col-md-6 col-lg-4">
+            <article>
+                <div class="post_img card-blog-img">
+                    <img src="static/img/post_default.png"
+                         alt="Card image cap">
+                    <a href="#">
+                        <span class="card-blog-meta" style="background-color: #007cbe;">Category</span>
+                    </a>
+                </div>
+                <div class="card-blog-content">
+                    <h5 class="post_title">
+                        <a href="{{ url_for('single', id=post.id) }}">{{ post.title }}</a>
+                    </h5>
+                    <div class="post_meta_top">
+                        <span class="post_meta_date">{{ post.timestamp  }}</span>
+                        <span class="post_meta_author">Author: {{ post.author.username}}</span>
+{#                        <span class="post_meta_comments">Comments:</span>#}
+                    </div>
+                    <div class="post_content">
+                        <p>{{ post.content }}</p>
+                    </div>
+                </div>
+            </article>
+        </div>
         {% endfor %}
-    </ul>
+    </div>
 {% endblock %}
