--- a/app/templates/layout/base.html
+++ b/app/templates/layout/base.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="../../static/img/favicon.png">
     <link rel="stylesheet" href="../../static/css/styles.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
     <title>{{ app_name }} - {{ title }}</title>
 </head>
 <body>
@@ -62,12 +65,10 @@
         </div>
     </nav>
     <main class="container">
-        <div class="row">
-            {% block content %}{% endblock %}
-        </div>
+        {% block content %}{% endblock %}
     </main>
     <footer class="page-footer font-small fixed-bottom bg-dark">
-        <div class="footer-copyright text-center py-3 text-light">© 2019 Copyright:
+        <div class="footer-copyright text-center py-3 text-light">© {{ current_year }} Copyright:
             <a href="/"> Simple Blog</a>
         </div>
     </footer>
@@ -81,5 +82,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+<script src="../../static/js/scripts.min.js"></script>
 </body>
 </html>
