--- a/app/templates/resources/sass/main.sass
+++ b/app/templates/resources/sass/main.sass
@@ -554,3 +554,258 @@ body.sidebar-toggled footer.sticky-footer
 
 .invalid-feedback
   display: block
+
+//-------------------------------LOGIN-------------------------------//
+
+.login
+  border-radius: 10px
+  border: none
+  padding: 25px
+  background: -webkit-linear-gradient(top, #022c43, #115173)
+  position: relative
+
+  .login-icon
+    background: white
+    width: 120px
+    height: 120px
+    border-radius: 50%
+    display: flex
+    align-items: center
+    justify-content: center
+    font-size: 60px
+    margin: 0 auto
+
+  .login-title
+    text-align: center
+    color: white
+    text-transform: uppercase
+    position: relative
+    font-weight: 700
+    top: 15px
+
+  .login-form
+    font-size: 18px
+    color: #fff !important
+    line-height: 1.2
+    display: block
+    width: 100%
+    height: 45px
+    background: 0 0
+    padding: 0 5px 0 38px
+    border: none
+    border-bottom: 2px solid #ffffff40
+
+    &::placeholder
+      color: white
+
+    &:focus
+      outline: none
+      padding-left: 5px
+
+    &:focus + .login-span:before
+      bottom: 38px
+      font-size: 14px
+
+    &:focus-within + .login-span:after
+      width: 100% !important
+
+    &:focus::placeholder
+      color: transparent
+
+  .login-group
+    position: relative
+
+  .login-span
+    position: absolute
+    display: block
+    width: 100%
+    height: 100%
+    top: 0
+    left: 0
+    pointer-events: none
+
+    &:after
+      content: ""
+      display: block
+      position: absolute
+      bottom: 0
+      left: 0
+      width: 0
+      height: 2px
+      -webkit-transition: all .4s
+      -o-transition: all .4s
+      -moz-transition: all .4s
+      transition: all .4s
+      background: #fff
+
+  .username:before
+    content: "\f007"
+    font-family: "Font Awesome 5 Free", serif
+    font-weight: 900
+    font-size: 16px
+    position: absolute
+    bottom: 13px
+    color: white
+    left: 5px
+    transition: all .4s
+
+  .password:before
+    content: "\f084"
+    font-family: "Font Awesome 5 Free", serif
+    font-weight: 900
+    font-size: 16px
+    position: absolute
+    bottom: 13px
+    color: white
+    left: 5px
+    transition: all .4s
+
+  .login-links
+    display: flex
+    flex-wrap: wrap
+    justify-content: center
+    align-items: center
+    flex-direction: column
+
+    .login-btn
+      padding: 0 20px
+      width: 120px
+      height: 50px
+      border-radius: 25px
+      outline: none
+      border: none
+
+    a
+      margin-top: 15px
+      color: lightgray
+      font-size: 14px
+
+      &:hover
+        text-decoration: none
+        color: white
+
+.login-focused
+  outline: none
+  padding-left: 5px !important
+
+  + .login-span:before
+    bottom: 38px !important
+    font-size: 14px !important
+
+  + .login-span:after
+    width: 100% !important
+
+
+.login-check
+  padding-left: 5px
+  padding-top: 5px
+  padding-bottom: 35px
+
+.form-check-input
+  display: none
+
+.form-check-label
+  font-size: 15px
+  color: #fff
+  line-height: 1.2
+  display: block
+  position: relative
+  padding-left: 26px
+  cursor: pointer
+
+.form-check-label::before
+  content: "\f00c"
+  font-family: "Font Awesome 5 Free", sans-serif
+  font-size: 13px
+  color: transparent
+  font-weight: 900
+  display: flex
+  justify-content: center
+  align-items: center
+  position: absolute
+  width: 16px
+  height: 16px
+  border-radius: 2px
+  background: #fff
+  left: 0
+  top: 50%
+  transform: translateY(-50%)
+
+.form-check-input:checked + .form-check-label::before
+  color: #555555
+
+
+//-------------------------------END LOGIN-------------------------------//
+
+//-------------------------------POST-------------------------------//
+.blog_posts article
+  margin-bottom: 45px
+  border: 1px solid #e0e0e094
+  box-shadow: 0 2px 6px lightgrey
+
+.card-blog-img.post_img
+  position: relative
+  margin-bottom: 0
+
+.card-blog-img img
+  border-top-left-radius: 3px
+  border-top-right-radius: 3px
+
+.card-blog-img .card-blog-meta
+  position: absolute
+  top: 30px
+  left: 30px
+  border-radius: 3px
+  font-size: 13px
+  color: #fff
+  padding: 5px 11px
+
+.card-blog-content
+  padding: 24px 30px 15px 30px
+  background: #e0e0e094
+  border-bottom-left-radius: 3px
+  border-bottom-right-radius: 3px
+
+.post_title
+  -ms-word-wrap: break-word
+  word-wrap: break-word
+
+  &:after
+    content: ''
+    width: 50px
+    height: 2px
+    display: block
+    position: absolute
+    background-color: #ee7674
+
+  a
+    color: #00000085
+    font-weight: bold
+    text-transform: uppercase
+    transition: all .3s ease-in-out
+
+  a:hover
+    color: #4e5e6e
+    text-decoration: none !important
+
+.post_img
+  margin-bottom: 24px
+
+.blog_posts .post_content p
+  margin-bottom: 0.85rem
+
+.post_meta_top
+  margin-bottom: 12px
+
+.post_meta_top,
+.post_meta_top a
+  color: #666
+  font-size: 14px
+
+.post_img img
+  max-width: 275px
+  width: 100%
+  height: 204px
+  object-fit: cover
+
+
